crates/clock/src/snapshots/telmo_clock__ui__tests__alarms.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms                                       next in 6h 53m

╭─ Alarms 4 ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ 04:15   Flight              Once                        ○ off                        │
│   07:30   Wake up             Weekdays      in 1d 17h     ● on                         │
│   18:00   Gym                 Mon Wed Fri   in 2d 3h      ● on                         │
│   21:00   Pills               Every day     in 6h 53m     ● on                         │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 n new  ↵ on/off  x delete  ←→ tab  ? more  esc close
