crates/clock/src/snapshots/telmo_clock__ui__tests__new_timer.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms                                 2 running · 1 paused

╭─ Tea ───────────────────────────────────────────────────────────────────────────── 5m ─╮
│   █ █   ███ ███                                                                        │
│   █ █ █   █   █                                                                        │
│   ███   ███ ███╭─ New timer ──────────────────────────────────────────╮                │
│     █ █   █ █  │                                                      │                │
│     █   ███ ███│  Try 5m, 1h30, 90s or 25:00, then a name.            │                │
│                │                                                      │                │
│   ━━━━━━━━━━━━━│   25m tea▏                                           │━━━━━────────   │
│   running · end│                                                      │                │
╰────────────────│  tea · 25 minutes · ends 14:32                       │────────────────╯
╭─ Timers 4 ─────│                                                      │────────────────╮
│ ▌ Tea          │  recent  25m  5m  1h30m                              │                │
│   Pasta        │                                                      │                │
│   Pomodoro     │   ↵ start   tab recent   esc cancel                  │                │
│   Laundry      ╰──────────────────────────────────────────────────────╯                │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 n new  ↵ pause  r restart  x delete  ←→ tab  ? more  esc close
