crates/clock/src/snapshots/telmo_clock__ui__tests__stopwatch.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms                                              running

╭─ Stopwatch ────────────────────────────────────────────────────────────────── running ─╮
│    █  ███   ███ █ █   ███                                                              │
│   ██    █ █   █ █ █   █                                                                │
│    █  ███   ███ ███   ███                                                              │
│    █  █   █   █   █     █                                                              │
│   ███ ███   ███   █ █ ███                                                              │
│                                                                                        │
│   lap 4 · 1:21.4 since the last lap                                                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Laps 3 ───────────────────────────────────────────────────────────────────────────────╮
│    Lap      Split       Total        vs previous                                       │
│    #3      3:07.26     11:13.07        −0:46.25                                        │
│    #2      3:53.51      8:05.81        −0:18.79                                        │
│    #1      4:12.30      4:12.30                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 space start/stop  l lap  r reset  ←→ tab  ? more  esc close
