crates/clock/src/snapshots/telmo_clock__ui__tests__stopwatch_idle.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms

╭─ Stopwatch ──────────────────────────────────────────────────────────────────── ready ─╮
│   ███   ███ ███   ███                                                                  │
│   █ █ █ █ █ █ █   █ █                                                                  │
│   █ █   █ █ █ █   █ █                                                                  │
│   █ █ █ █ █ █ █   █ █                                                                  │
│   ███   ███ ███ █ ███                                                                  │
│                                                                                        │
│   press space to start                                                                 │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Laps ─────────────────────────────────────────────────────────────────────────────────╮
│   No laps yet. Press l while it runs.                                                  │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 space start/stop  l lap  r reset  ←→ tab  ? more  esc close
