crates/clock/src/snapshots/telmo_clock__ui__tests__timers.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms                                 2 running · 1 paused

╭─ Tea ───────────────────────────────────────────────────────────────────────────── 5m ─╮
│   █ █   ███ ███                                                                        │
│   █ █ █   █   █                                                                        │
│   ███   ███ ███                                                                        │
│     █ █   █ █                                                                          │
│     █   ███ ███                                                                        │
│                                                                                        │
│   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━────────   │
│   running · ends 14:11                                                                 │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Timers 4 ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ Tea                  4:32  ━━━━━━━━━━━━━━━━━━━━━━──  running                         │
│   Pasta                8:10  ━━━━━━━━━━━━━━━━━━━━────  running                         │
│   Pomodoro            18:45  ━━━━━━━━━━━━━━━━━━──────  paused                          │
│   Laundry              0:00  ────────────────────────  done                            │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 n new  ↵ pause  r restart  x delete  ←→ tab  ? more  esc close
