crates/clock/src/snapshots/telmo_clock__ui__tests__timers_empty.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms

╭─ Timers ───────────────────────────────────────────────────────────────────────────────╮
│                                                                                        │
│  No timers. Press n to start one,                                                      │
│  or run `telmo-clock timer start 5m`.                                                  │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 n new  ↵ pause  r restart  x delete  ←→ tab  ? more  esc close
