crates/clock/src/snapshots/telmo_clock__ui__tests__world.snap
---
source: crates/clock/src/ui.rs
expression: render(&app)
---
 Timers · Stopwatch · World · Alarms                                           Sat 10 Oct

╭─ Buenos Aires ─────────────────────────────────────────────────── Saturday 10 October ─╮
│    █  █ █   ███ ███                                                                    │
│   ██  █ █ █ █ █   █                                                                    │
│    █  ███   █ █   █                                                                    │
│    █    █ █ █ █   █                                                                    │
│   ███   █   ███   █                                                                    │
│                                                                                        │
│   today · UTC−3 · here                                                                 │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Cities 5 ─────────────────────────────────────────────────────────────────────────────╮
│ ▌ Buenos Aires      14:07                    same    UTC−3                             │
│   San Francisco     10:07                    −4h     UTC−7                             │
│   New York          13:07                    −1h     UTC−4                             │
│   London            18:07                    +4h     UTC+1                             │
│   Tokyo             02:07   Sun · tomorrow   +12h    UTC+9                             │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 ↑↓ select  ←→ tab  ? more  esc close
