crates/clock/src/snapshots/telmo_clock__ui__tests__world_other_city.snap
---
source: crates/clock/src/ui.rs
expression: out
---
 Timers · Stopwatch · World · Alarms                                           Sat 10 Oct

╭─ Tokyo ──────────────────────────────────────────────────────────── Sunday 11 October ─╮
│   ███ ███   ███ ███                                                                    │
│   █ █   █ █ █ █   █                                                                    │
│   █ █ ███   █ █   █                                                                    │
│   █ █ █   █ █ █   █                                                                    │
│   ███ ███   ███   █                                                                    │
│                                                                                        │
│   tomorrow · UTC+9                                                                     │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Cities 5 ─────────────────────────────────────────────────────────────────────────────╮
│   Buenos Aires      14:07                    same    UTC−3                             │
│   San Francisco     10:07                    −4h     UTC−7                             │
│   New York          13:07                    −1h     UTC−4                             │
│   London            18:07                    +4h     UTC+1                             │
│ ▌ Tokyo             02:07   Sun · tomorrow   +12h    UTC+9                             │
│                                                                                        │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯

 ↑↓ select  ←→ tab  ? more  esc close
